# lethes

./: .gitignore  LICENSE  README-cn.md  README.md  example.py  pyproject.toml
.github/workflows/: release.yml
src/lethes/: __init__.py  observability.py
src/lethes/algorithms/: __init__.py  base.py  dependency.py  greedy.py  prefix_cache.py  recency.py
src/lethes/cache/: __init__.py  base.py  memory_backend.py  prefix_tracker.py  redis_backend.py
src/lethes/config/pricing/: default_pricing.json
src/lethes/engine/: __init__.py  constraints.py  cost_estimator.py  orchestrator.py  planner.py
src/lethes/flags/: __init__.py  parser.py  schema.py  session.py
src/lethes/integrations/: __init__.py  middleware.py  open_webui.py
src/lethes/models/: __init__.py  budget.py  conversation.py  message.py  pricing.py
src/lethes/summarizers/: __init__.py  base.py  levels.py  llm.py
src/lethes/utils/: __init__.py  content.py  ids.py  tokens.py
src/lethes/weighting/: __init__.py  base.py  composite.py  embedding.py  keyword.py  llm_analyzer.py  smart.py  static.py
tests/: conftest.py  test_algorithms.py  test_cache.py  test_flags.py  test_llm_analyzer.py  test_models.py  test_orchestration.py  test_orchestrator.py  test_tool_calls.py  test_weighting.py
