[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "lethes"
version = "0.2.4"
description = "Constraint-driven LLM context management and message orchestration library"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
keywords = ["llm", "context", "openai", "message-broker", "token-management", "context-window"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Typing :: Typed",
]

# Minimal hard deps — everything else is optional
dependencies = [
    "tiktoken>=0.7",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "httpx>=0.27",
    "structlog>=24.0",
]

[project.optional-dependencies]
redis = ["redis[hiredis]>=5.0"]
bm25 = ["rank_bm25>=0.2"]
langchain = ["langchain-core>=0.2"]
all = ["lethes[redis,bm25,langchain]"]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "mypy>=1.10",
    "ruff>=0.4",
    "respx>=0.21",
    "fakeredis[aioredis]>=2.0",
]

[project.urls]
Repository = "https://github.com/kb5000/lethes"

[tool.hatch.build.targets.wheel]
packages = ["src/lethes"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "W", "F", "I", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.11"
strict = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
